Firewall/iptables_rules.txt
# Generated by iptables-save v1.8.10 on Sat Apr  6 00:57:41 2024
*filter
:INPUT DROP [48162:8149037]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [24847224:8198164771]
:SYN_FLOOD - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j SYN_FLOOD
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A INPUT -p icmp -j DROP
-A OUTPUT -d 87.227.139.160/27 -j DROP
-A OUTPUT -d 87.227.139.144/28 -j DROP
-A OUTPUT -d 87.227.139.140/30 -j DROP
-A OUTPUT -d 212.50.25.192/26 -j DROP
-A OUTPUT -d 216.105.32.0/20 -j DROP
-A OUTPUT -d 87.230.98.64/28 -j DROP
-A OUTPUT -d 216.105.32.0/20 -j DROP
-A OUTPUT -d 82.118.229.0/24 -j DROP
-A OUTPUT -d 149.248.0.0/18 -j DROP
-A OUTPUT -d 212.95.165.0/24 -j DROP
-A OUTPUT -d 37.19.203.0/24 -j DROP
-A OUTPUT -d 85.91.143.128/26 -j DROP
-A OUTPUT -d 85.91.143.128/26 -j DROP
-A OUTPUT -p icmp -j DROP
-A SYN_FLOOD -j DROP
COMMIT
# Completed on Sat Apr  6 00:57:41 2024
